--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
   </head>
 
   <body>
+    <%= render "shared/navbar" %>
+
     <main class="container mx-auto mt-28 px-5 flex">
       <% if notice %>
         <p class="notice"><%= notice %></p>
