--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
               <%= icon 'fa-solid', 'shopping-cart' %>
             <% end %>
 
-            <ul class="list-none hidden dropdown-list absolute left-0 rounded-b border border-gray-500 shadow">
+            <ul class="list-none dropdown-list absolute left-0 rounded-b border border-gray-500 shadow">
               <h5 class="mt-2 uppercase text-xs text-gray-500 font-normal py-2 pl-3 tracking-wide">My Stuff</h5>
 
               <li>
@@ -49,7 +49,8 @@
               </li>
 
               <li>
-                <%= link_to destroy_user_session_path, class:"hover:bg-purple-500 hover:text-white text-gray-700 
+                <%= link_to destroy_user_session_path, data: { turbo_method: :delete },
+                                                       class:"hover:bg-purple-500 hover:text-white text-gray-700 
                                                               no-underline no-underline block py-2 px-4 flex 
                                                               items-center text-sm" do %>
                   <%= icon 'fa-solid', 'shopping-cart' %>Sign Out
