style devise submit buttons

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -9,7 +9,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send me reset password instructions", 
+                 class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 <% end %>
 
