--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -9,7 +9,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+    <%= f.submit "Resend confirmation instructions", 
+                 class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 <% end %>
 
