--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,10 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", 
+                  omniauth_authorize_path(resource_name, provider),
+                  class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium", 
+                  data: { turbo: false } %>
+    <br />
   <% end %>
 <% end %>
