--- a/app/views/layouts/chats.html.erb
+++ b/app/views/layouts/chats.html.erb
@@ -19,8 +19,26 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
-      <%= yield %>
-    </main>
+    <div class="container-fluid d-flex vh-100">
+      <div class="row align-self-strech w-100">
+        <div class="col-md-2 mx-auto bg-dark text-white">
+          <div class="w-100 text-align-center d-flex justify-content-center mt-3">
+            <%= form_with(model: Chat.new) do |form| %>
+              <%= form.hidden_field :history, value: "" %>
+              <%= form.submit("+ New chat", class:"mt-3 mt-3-dark border-light") if current_user %>
+            <% end %>
+          </div>
+          <div class="mt-3">
+            <h4>Today:</h4>
+            <turbo-frame id="user-chats">
+              <%= render partial: "chats/chat_list", collection: current_user.chats, as: :chat %>
+            </turbo-frame>
+          </div>
+        </div>
+        <div class="col-10">  
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
