--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,6 +1,8 @@
 <div class="w-full">
   <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice">
+      <%= notice %>
+    </p>
   <% end %>
 
   <% content_for :title, "Chats" %>
@@ -14,8 +16,11 @@
     <% @chats.each do |chat| %>
       <%= render chat %>
       <p>
-        <%= link_to "Show this chat", chat, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+        <%= link_to "Show this chat", 
+                    chat, 
+                    class: "ml-2 mb-2 rounded-lg py-3 px-5 bg-blue-100 text-gray-700 inline-block font-medium" %>
       </p>
+      <hr>
     <% end %>
   </div>
 </div>
