chats layout to full screen height + remove new chat from index view

--- a/app/views/layouts/chats.html.erb
+++ b/app/views/layouts/chats.html.erb
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="flex h-100">
+    <div class="flex min-h-screen">
       <div class="w-1/4 bg-gray-600 text-white p-4">
         <div class="">
           <%= form_with(model: Chat.new) do |form| %>
