after chat create append partial instead of prepend

--- a/app/views/chats/create.turbo_stream.erb
+++ b/app/views/chats/create.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.prepend "user-chats", partial: "chats/chat_list", locals: { chat: @chat } %>
+<%= turbo_stream.append "user-chats", partial: "chats/chat_list", locals: { chat: @chat } %>
